--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -4,8 +4,11 @@
       "title": "Not found",
       "subtext_html": "The page you were looking for does not exist"
     },
-    "cart": {
+    "Cart": {
       "title": "Cart"
+    },
+    "Blog": {
+      "title": "Blog"
     }
   }
 }
