--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,8 +1,14 @@
 {
-    "general": {
-      "404": {
-        "title": "Not found",
-        "subtext_html": "The page you were looking for does not exist"
-      }
+  "general": {
+    "404": {
+      "title": "Not founde",
+      "subtext_html": "The pagee you weree lookinge for does not exist"
+    },
+    "Cart": {
+      "title": "Carte"
+    },
+    "Blog": {
+      "title": "Bloge"
     }
+  }
 }
