[TASK] Add translation switch to frontend for users to use

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -5,7 +5,7 @@
       "subtext_html": "The pagee you weree lookinge for does not exist"
     },
     "Cart": {
-      "title": "Carte"
+      "title": "Panier"
     },
     "Blog": {
       "title": "Bloge"
